# admin-base

./: CMakeLists.txt  README.md  main.cpp
data /: data.json
src/: database.cpp  database.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
